--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://LenaMazurenko.github.io/team-project-js",
+  "homepage": "https://TatianaTanko.github.io/Filmoteka",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-js/"
+    "build": "parcel build src/*.html --public-url /Filmoteka/"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "granim": "^2.0.0",
+    "handlebars": "^4.7.7",
+    "lodash.debounce": "^4.0.8",
+    "tui-pagination": "^3.4.1"
   }
 }
