--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://LenaMazurenko.github.io/team-project-js",
+  "homepage": "https://TatianaTanko.github.io/team-project-js",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /team-project-js/"
@@ -26,8 +26,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "firebase": "^9.5.0",
+    "granim": "^2.0.0",
     "handlebars": "^4.7.7",
-    "modern-normalize": "^1.1.0"
+    "lodash.debounce": "^4.0.8",
+    "tui-pagination": "^3.4.1"
   }
 }
